--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,1 +1,7 @@
-<p>user works!</p>
+<div class="wrapper ">
+    <div id="formContent">
+      <h2 class=" underlineHover" routerLink="/login" routerLinkActive="active">Sign In </h2>
+      <h2 class=" underlineHover" routerLink="/signup" routerLinkActive="active">Sign Up </h2>
+      <router-outlet></router-outlet>
+    </div>
+  </div>
