--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -1,46 +1,46 @@
-<!-- <div class="row">
+<div class="row">
     <div class="col s12">
       <div class="card">
         <div class="card-content white-text">
           <div class="row">
             <div class="col s5">
-              <form #employeeForm="ngForm" (ngSubmit)="onSubmit(employeeForm)">
-                <input type="hidden" name="_id" #_id="ngModel" [(ngModel)]="employeeService.selectedEmployee._id">
+              <form #employeeForm="ngForm" >
+                <input type="hidden" name="_id" #_id="ngModel" [(ngModel)]="employeeData.id">
                 <div class="row">
                   <div class="input-field col s12">
-                    <input type="text" name="name" #name="ngModel" [(ngModel)]="employeeService.selectedEmployee.name" placeholder="Enter full name" required>
-                    <label>Name :
+                    <input type="text" name="Project name" #name="ngModel" [(ngModel)]="employeeData.name" placeholder="Enter Project name" required>
+                    <label>Project name :
                       <label class="red-text">*</label>
                     </label>
                   </div>
                 </div>
                 <div class="row">
                   <div class="input-field col s12">
-                    <input type="text" name="position" #name="ngModel" [(ngModel)]="employeeService.selectedEmployee.position" placeholder="Eg : Snr. Developer">
-                    <label>Position :</label>
+                    <input type="text" name="Task" #name="ngModel" [(ngModel)]="employeeData.position" placeholder="Eg : Testing">
+                    <label>Task :</label>
                   </div>
                 </div>
                 <div class="row">
                   <div class="input-field col s12">
-                    <input type="text" name="office" #name="ngModel" [(ngModel)]="employeeService.selectedEmployee.office" placeholder="Enter office location">
-                    <label>Office :</label>
+                    <input type="text" name="Remarks" #name="ngModel" [(ngModel)]="employeeData.office" placeholder="Work Status">
+                    <label>Remarks :</label>
                   </div>
                 </div>
-                <div class="row">
+                <!-- <div class="row">
                   <div class="input-field col s12">
-                    <input type="text" name="salary" #name="ngModel" [(ngModel)]="employeeService.selectedEmployee.salary" placeholder="Salary per annum">
+                    <input type="text" name="salary" #name="ngModel" [(ngModel)]="employeeData.name" placeholder="Salary per annum">
                     <label>Salary :</label>
                   </div>
-                </div>
+                </div> -->
                 <div class="row">
                   <div class="input-field col s12">
-                    <button class="btn btn-custom right" type="button" (click)="resetForm(employeeForm)">Reset</button>
-                    <button class="btn btn-custom right" type="submit" [disabled]="!employeeForm.valid">Submit</button>
+                    <button class="btn btn-custom right" type="button" (click)="resetForm()">Reset</button>
+                    <button class="btn btn-custom right" type="submit" [disabled]="!employeeForm.valid"(click)="saveForm()">Save</button>
                   </div>
                 </div>
               </form>
             </div>
-            <div class="col s7">
+            <!-- <div class="col s7">
                 <table class="responsive-table highlight">
                     <thead>
                       <tr>
@@ -64,10 +64,10 @@
                         </td>
                     </tr>
                   </table>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
     </div>
   
-  </div> -->
+  </div>
