--- a/src/app/commonsidenav/left-nav/left-nav.component.html
+++ b/src/app/commonsidenav/left-nav/left-nav.component.html
@@ -39,10 +39,10 @@
           <mat-icon>home</mat-icon> Home
         </a>
         <a mat-list-item routerLinkActive="list-item-active" routerLink="/dashboard">
-          <mat-icon>dashboard</mat-icon> Project
+          <mat-icon>dashboard</mat-icon> Dashboard
         </a>
         <a mat-list-item (click)="navigateTo('createProject')">
-          <mat-icon>edit</mat-icon> Create_Project
+          <mat-icon>edit</mat-icon> Project
         </a>
   
       </mat-nav-list>
