--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<!-- <div class="row">
     <div class="col s12">
       <div class="card">
         <div class="card-content white-text">
@@ -8,7 +8,7 @@
                 <input type="hidden" name="_id" #_id="ngModel" [(ngModel)]="employeeData.id">
                 <div class="row">
                   <div class="input-field col s12">
-                    <input type="text" name="Project name" #name="ngModel" [(ngModel)]="employeeData.name" placeholder="Enter Project name" required>
+                    <input type="text" name="Project name" #name="ngModel" [(ngModel)]="projectData.r" placeholder="Enter Project name" required>
                     <label>Project name :
                       <label class="red-text">*</label>
                     </label>
@@ -16,7 +16,7 @@
                 </div>
                 <div class="row">
                   <div class="input-field col s12">
-                    <input type="text" name="Task" #name="ngModel" [(ngModel)]="employeeData.position" placeholder="Eg : Testing">
+                    <input type="text" name="Task" #name="ngModel" [(ngModel)]="projectData.position" placeholder="Eg : Testing">
                     <label>Task :</label>
                   </div>
                 </div>
@@ -48,10 +48,10 @@
                         <th>EmployeeName</th>
                         <th>Task</th>
                         <th>Remarks</th>
-                        <!-- <th></th> -->
+                        <th></th>
                       </tr>
                     </thead>
-                    <!-- <tr *ngFor="let emp of employeeService.employees">
+                    <tr *ngFor="let emp of employeeService.employees">
                       <td>{{emp.name}}</td>
                       <td>{{emp.position}}</td>
                       <td>{{emp.office}}</td>
@@ -63,7 +63,7 @@
                             <i class="material-icons">delete</i>
                           </a>
                         </td>
-                    </tr> -->
+                    </tr>
                   </table>
             </div>
           </div>
@@ -71,4 +71,4 @@
       </div>
     </div>
   
-  </div>
+  </div> -->
